--- a/landing/frontend/package.json
+++ b/landing/frontend/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
