feat: json params in spring

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/soge_db
 spring.datasource.username=postgres
-spring.datasource.password=jaime1801
+spring.datasource.password=soge_usach
 spring.jpa.hibernate.ddl-auto=update
