--- a/landing/frontend/package.json
+++ b/landing/frontend/package.json
@@ -16,6 +16,7 @@
     "vuetify": "^3.4.4"
   },
   "devDependencies": {
+    "@mdi/font": "^7.3.67",
     "@vitejs/plugin-vue": "^4.4.0",
     "vite": "^4.4.11"
   }
